--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -22,6 +22,8 @@ jobs:
     - name: Deploy to minikube
       run:
         kubectl apply -f k8s-node-app.yaml
+    - name: get service details
+      run:
         kubectl get service
     - name: Test service URLs
       run: |
