--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -25,6 +25,9 @@ jobs:
     - name: get service details
       run:
         kubectl get service
+    - name: get pod logs
+      run:
+        kubectl get pods
     - name: Test service URLs
       run: |
           minikube service list
