--- a/.github/workflows/deploy-to-minikube-github-actions.yaml
+++ b/.github/workflows/deploy-to-minikube-github-actions.yaml
@@ -34,5 +34,5 @@ jobs:
     
     - name: Test service URLs
       run: |
-          minikube service list
+          minikube service list --url
           minikube service nodejs-app 
