--- a/.harness/deploytominikubegithubactions.yaml
+++ b/.harness/deploytominikubegithubactions.yaml
@@ -12,8 +12,6 @@ pipeline:
         type: Deployment
         spec:
           deploymentType: Kubernetes
-          service:
-            serviceRef: service
           environment:
             environmentRef: harnessdevenv
             deployToAll: false
@@ -44,6 +42,12 @@ pipeline:
                   timeout: 10m
                   spec:
                     skipDryRun: false
+          services:
+            values:
+              - serviceRef: deployment
+              - serviceRef: service
+            metadata:
+              parallel: false
         tags: {}
         failureStrategies:
           - onFailure:
